--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+# .env.example - Template for environment variables
+# Copy this file to .env and fill in your actual values
 
+# Required: Your Google API Key for Gemini
+GOOGLE_API_KEY=''
+
+# Model configuration 
+# For text/image chat model both use the same model name
+MODEL_NAME=gemini-2.5-flash-preview-04-17
+
+# Directory to save conversation history
+HISTORY_DIR=conversation_history
