--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your actual values
 
 # Required: Your Google API Key for Gemini
-GOOGLE_API_KEY='AIzaSyAzcX4noeudAzV6TH_3FPhwzuyzP4m0Kso'
+GOOGLE_API_KEY='Your Google API Key for Gemini'
 
 # Model configuration 
 # For text/image chat model both use the same model name
